--- a/src/Components/HomeComponents/OurWork/OurWork.css
+++ b/src/Components/HomeComponents/OurWork/OurWork.css
@@ -1,5 +1,5 @@
 .slider-container {
-  background-image: url("../../../images/header-bg.png");
+  /* background-image: url("../../../images/header-bg.png"); */
   background-size: cover;
   background-repeat: no-repeat;
   height: 70vh;
